<resources>
    <string name="app_name">My Application</string>
    <string name="suggestion">个性推荐</string>
    <string name="song_list">歌单</string>
    <string name="radio">主播电台</string>
    <string name="ranking_list">排行榜</string>
    <string name="create_list">创建的歌单</string>
    <string name="keep_list">收藏的歌单</string>
    <string name="localmusic">本地音乐</string>
    <string name="recentplay">最近播放</string>
    <string name="downloadmanage">下载管理</string>
    <string name="mysinger">我的歌手</string>
    <string name="myradio">我的电台</string>
    <string name="dynamic">动态</string>
    <string name="around">附近</string>
    <string name="friends">好友</string>
    <string name="personal">私人FM</string>
    <string name="everday_suggest">每日歌曲推荐</string>
    <string name="cloud_music">云音乐新歌榜</string>
    <string name="more">更多</string>
    <string name="onlyone">独家放送</string>
    <string name="suggestion_music">推荐歌单</string>
    <string name="latestmusic">最新音乐</string>
    <string name="suggestion_mv">推荐MV</string>
    <string name="player_radio">主播电台</string>
    <string name="mymessage">我的消息</string>
    <string name="pointmarket">积分商城</string>
    <string name="payformusic">付费音乐包</string>
    <string name="listen_recognize">听歌识曲</string>
    <string name="change_theme_color">主题换肤</string>
    <string name="allsonglist">全部歌单</string>
    <string name="choose_type">选择分类</string>
    <string name="precious_list">精品歌单</string>
    <string name="loading">努力加载中......</string>
    <string name="create">创作|翻唱</string>
    <string name="staras">明星做主播</string>
    <string name="talkshow">脱口秀</string>
    <string name="beautifulpoem">美文读物</string>
    <string name="musicstory">音乐故事</string>
    <string name="motion">情感调频</string>
    <string name="bookwithsound">有声小说</string>
    <string name="history">人文历史</string>
    <string name="xiangsheng">相声曲艺</string>
    <string name="iwannabe">我要做主播</string>
    <string name="englishworld">外语世界</string>
    <string name="nigigan">二次元</string>
    <string name="trip">旅途|城市</string>
    <string name="entertainment">娱乐|影视</string>
    <string name="threed">3D|电子</string>
    <string name="education">校园|教育</string>
    <string name="baby">亲子|教育</string>
    <string name="radiocomic">广播剧</string>
    <string name="radio_list">主播电台排行榜></string>
    <string name="introduction1">最火的节目和电台，</string>
    <string name="updateeverday">每天更新</string>
    <string name="greatintroduction">精彩节目推荐</string>
    <string name="eve_suggest">每天电台精选-订阅更精彩</string>
    <string name="popurlarradio">热门电台</string>
    <string name="transmit">转发</string>
    <string name="share_music">分享单曲:</string>
    <string name="musicloved">——根据你喜欢的单曲推荐</string>
    <string name="true_picture">原图</string>
    <string name="save">保存</string>
    <string name="vip_center">会员中心</string>
    <string name="listen_online">在线听歌免流量</string>
    <string name="night_mode">夜间模式</string>
    <string name="stopintime">定时停止播放</string>
    <string name="musicclock">音乐闹钟</string>
    <string name="drive_mode">驾驶模式</string>
    <string name="myclouddisk">我的云盘</string>
    <string name="adjust">现在可以根据个人喜好，自由调整首页栏目顺序啦~</string>
    <string name="adjust_btn">调整栏目顺序</string>
    <string name="familiar">认识的人</string>
    <string name="star_user">明星用户</string>
    <string name="talent_musician">音乐达人</string>
</resources>
