<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dynamic"
            android:padding="@dimen/padding_standard"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/actionBarColor"
            android:text="@string/dynamic" />
        <TextView
            android:id="@+id/around"
            android:padding="@dimen/padding_standard"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/around"
            />
        <TextView
            android:id="@+id/friends"
            android:padding="@dimen/padding_standard"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friends"
            />
    </LinearLayout>

    <View
        android:id="@+id/cut_off_rule"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/actionBarColor"></View>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>

</LinearLayout>