<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_standard">

    <philips.com.myapplication.customview.CircleImageView
        android:id="@+id/head_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        tools:src="@mipmap/daze"/>

    <RelativeLayout
        android:id="@+id/userinfo_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_standard"
        android:layout_toRightOf="@+id/head_icon"
        android:layout_marginLeft="@dimen/padding_standard">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="次元墙怪物"
            android:textColor="@color/actionBarColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username"
            android:paddingLeft="@dimen/padding_very_small"
            android:text="@string/share_music"/>
        <TextView
            android:id="@+id/date_text"
            android:layout_below="@+id/username"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_alignLeft="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:text="7月15日"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_standard"
                android:paddingRight="@dimen/padding_standard"
                android:paddingTop="@dimen/padding_very_small"
                android:paddingBottom="@dimen/padding_very_small"
                android:background="@drawable/introduction_bg"
                android:textColor="@color/actionBarColor"
                android:textSize="12sp"
                android:text="+ 关注"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/padding_standard"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/arrowdown"/>

        </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/sharecomment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userinfo_rl"
        android:layout_alignLeft="@+id/userinfo_rl"></include>


    <RelativeLayout
        android:id="@+id/sharemusic_info"
        android:layout_below="@+id/comment_part"
        android:layout_alignLeft="@+id/comment_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/musicview_bg"
        android:layout_marginTop="@dimen/padding_small"
        android:padding="@dimen/padding_standard">

        <ImageView
            android:id="@+id/sharemusic_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            tools:src="@mipmap/sample1"/>

        <LinearLayout
            android:id="@+id/sharemuic_info"
            android:layout_toRightOf="@+id/sharemusic_icon"
            android:layout_marginLeft="@dimen/padding_standard"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sharemusic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:text="Re:Re(Single ver.)(TV动画《只有我不存在的街道OP》)"/>

            <TextView
                android:id="@+id/sharemusic_creator"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="ASIAN KUNG-FU GENERATION"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/musicloved_text"
        android:layout_below="@+id/sharemusic_info"
        android:layout_alignStart="@+id/sharemusic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_standard"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/musicloved"
        android:textSize="12sp"
        />

    <LinearLayout
        android:id="@+id/bottomlabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicloved_text"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_very_large"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/praise"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/padding_very_small"
                android:src="@mipmap/praise"
                />
            <TextView
                android:id="@+id/praise_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/navigation_back"
                android:textSize="13sp"
                tools:text="14"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_very_large"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/comment"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/padding_very_small"
                android:src="@mipmap/comment"
                />
            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/navigation_back"
                android:textSize="13sp"
                tools:text="14"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_very_large"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/transmit"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/padding_very_small"
                android:src="@mipmap/transmit"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/navigation_back"
                android:textSize="13sp"
                android:text="@string/transmit"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>